--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,22 +1,3 @@
-
-$heading: #383838;
-$p: #383838;
-
-$bg1:#46B1C9;
-$bg2:snow;
-$bg3:#46B1C9;
-
-$headerBgAspect: 0;
-
-$stickyimg: url(../images/sticky.webp);
-$imageBgAspect: 19.2% 10.8%;
-
-$stickyblendcolor: #46B1C9;
-
-$stickypheight: 500px;
-$stickyppadding: 20px 2.25% 0 2.25%;
-$stickypwidth: 62%;
-
-$iconmargin: 25px;
-
-$paddingmobile: 5%;
+$color_1:#383838;
+$color_2:#46B1C9;
+$color_3:snow;
