--- a/scss/app.scss
+++ b/scss/app.scss
@@ -278,7 +278,7 @@ header {
     display: flex;
     justify-content: space-around;
     width: 62%;
-    min-height: 300px;
+    min-height: 325px;
     font-size: $fontsize;
     @include max_lg {
       width: initial;
@@ -292,9 +292,14 @@ header {
       &.sticky {
         position: sticky;
         top: 7.5%;
+        bottom: 7.5%;
+        padding: 0 0 5% 0;
         @include max_lg {
           position: relative;
           top: initial;
+          top: 7.5%;
+          bottom: initial;
+          padding: 0;
         }
       }
     }
