--- a/scss/app.scss
+++ b/scss/app.scss
@@ -16,25 +16,6 @@ body {
   max-width: 1920px;
   margin: auto;
   position: relative;
-  &.before::before {
-    content: " ";
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    animation-name: background-1;
-    animation-fill-mode: forwards;
-    animation-duration: 1s;
-    animation-timing-function: ease-in-out;
-    z-index: -1;
-    .z {
-      animation-name: background-1;
-      animation-fill-mode: forwards;
-      animation-duration: 1s;
-      animation-timing-function: ease-in-out;
-    }
-  }
   &.before-0 {
     &::before {
       content: " ";
@@ -182,8 +163,28 @@ body {
       animation-timing-function: ease-in-out;
     }
   }
+  &.before-start {
+    &::before {
+      content: " ";
+      position: fixed;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      animation-name: background-1;
+      animation-fill-mode: forwards;
+      animation-duration: 1s;
+      animation-timing-function: ease-in-out;
+      z-index: -1;
+    }
+    .z {
+      animation-name: background-1;
+      animation-fill-mode: forwards;
+      animation-duration: 1s;
+      animation-timing-function: ease-in-out;
+    }
+  }
 }
-
 
 @keyframes background-1 {
   from {
