--- a/scss/app.scss
+++ b/scss/app.scss
@@ -16,7 +16,10 @@ body {
   max-width: 1920px;
   margin: auto;
   position: relative;
-  &.before-0 {
+  &.before-0,
+  &.before-2,
+  &.before-4,
+  &.before-6 {
     &::before {
       content: " ";
       position: fixed;
@@ -30,97 +33,10 @@ body {
       animation-timing-function: ease-in-out;
       z-index: -1;
     }
-    .z {
-      animation-name: background-2;
-      animation-fill-mode: forwards;
-      animation-duration: 1s;
-      animation-timing-function: ease-in-out;
-    }
   }
-  &.before-1 {
-    &::before {
-      content: " ";
-      position: fixed;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      animation-name: background-1;
-      animation-fill-mode: forwards;
-      animation-duration: 1s;
-      animation-timing-function: ease-in-out;
-      z-index: -1;
-    }
-    .z {
-      animation-name: background-1;
-      animation-fill-mode: forwards;
-      animation-duration: 1s;
-      animation-timing-function: ease-in-out;
-    }
-  }
-  &.before-2 {
-    &::before {
-      content: " ";
-      position: fixed;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      animation-name: background-2;
-      animation-fill-mode: forwards;
-      animation-duration: 1s;
-      animation-timing-function: ease-in-out;
-      z-index: -1;
-    }
-    .z {
-      animation-name: background-2;
-      animation-fill-mode: forwards;
-      animation-duration: 1s;
-      animation-timing-function: ease-in-out;
-    }
-  }
-  &.before-3 {
-    &::before {
-      content: " ";
-      position: fixed;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      animation-name: background-1;
-      animation-fill-mode: forwards;
-      animation-duration: 1s;
-      animation-timing-function: ease-in-out;
-      z-index: -1;
-    }
-    .z {
-      animation-name: background-1;
-      animation-fill-mode: forwards;
-      animation-duration: 1s;
-      animation-timing-function: ease-in-out;
-    }
-  }
-  &.before-4 {
-    &::before {
-      content: " ";
-      position: fixed;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      animation-name: background-2;
-      animation-fill-mode: forwards;
-      animation-duration: 1s;
-      animation-timing-function: ease-in-out;
-      z-index: -1;
-    }
-    .z {
-      animation-name: background-2;
-      animation-fill-mode: forwards;
-      animation-duration: 1s;
-      animation-timing-function: ease-in-out;
-    }
-  }
+  &.before-start,
+  &.before-1,
+  &.before-3,
   &.before-5 {
     &::before {
       content: " ";
@@ -134,54 +50,6 @@ body {
       animation-duration: 1s;
       animation-timing-function: ease-in-out;
       z-index: -1;
-    }
-    .z {
-      animation-name: background-1;
-      animation-fill-mode: forwards;
-      animation-duration: 1s;
-      animation-timing-function: ease-in-out;
-    }
-  }
-  &.before-6 {
-    &:before {
-      content: " ";
-      position: fixed;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      animation-name: background-2;
-      animation-fill-mode: forwards;
-      animation-duration: 1s;
-      animation-timing-function: ease-in-out;
-      z-index: -1;
-    }
-    .z {
-      animation-name: background-2;
-      animation-fill-mode: forwards;
-      animation-duration: 1s;
-      animation-timing-function: ease-in-out;
-    }
-  }
-  &.before-start {
-    &::before {
-      content: " ";
-      position: fixed;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      animation-name: background-1;
-      animation-fill-mode: forwards;
-      animation-duration: 1s;
-      animation-timing-function: ease-in-out;
-      z-index: -1;
-    }
-    .z {
-      animation-name: background-1;
-      animation-fill-mode: forwards;
-      animation-duration: 1s;
-      animation-timing-function: ease-in-out;
     }
   }
 }
