--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,9 @@
 $color_1:#383838;
-$color_2:#46B1C9;
-$color_3:snow;
-$color_4:#46c9a0;
+$color_2:snow;
+$Red: #FFE5E5;
+$Orange: #FFE4B2;
+$Yellow: #FFFFB2;
+$Green: #CCE5CC;
+$Blue: #E5E5FF;
+$Indigo: #dbcce6;
+$Violet: #FBE6FB;
