--- a/scss/app.scss
+++ b/scss/app.scss
@@ -353,8 +353,8 @@ header {
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: transparent;
-    opacity: 0.2;
+    background-color: $Blue;
+    opacity: 0.1;
   }
 }
 
