--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,8 +1,8 @@
 @import "./variables";
 @import "./partials/font";
 @import "./partials/breakpoints";
-@import "../node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
-@import "../node_modules/@fortawesome/fontawesome-free/scss/regular";
+@import "@fortawesome/fontawesome-free/scss/fontawesome";
+@import "@fortawesome/fontawesome-free/scss/regular";
 
 * {
   box-sizing: border-box;
