--- a/scss/app.scss
+++ b/scss/app.scss
@@ -14,7 +14,10 @@
 // scrollbar
 
 .os-theme-body {
-  --os-size: 7px;
+  --os-size: 4px;
+  @include min_md {
+      --os-size: 7px;
+  }
 }
 
 .os-theme-body .os-scrollbar-handle {
