--- a/scss/app.scss
+++ b/scss/app.scss
@@ -255,15 +255,20 @@ body {
   }
 }
 
+h1,
+h2,
+p {
+  font-size: clamp(15px, 3vw, 17px);
+}
+
 header {
   h1 {
     color: $color_1;
     padding: 2.5% 2.5% 0 2.5%;
     font-weight: 500;
-    font-size: 17px;
     color: $color_1;
     @include max_lg {
-      padding: 7.5% 2.5% 0 2.5%;
+      padding: 7.5% 17px 0 17px;
     }
   }
 }
@@ -286,7 +291,7 @@ header {
     justify-content: initial;
     flex-wrap: initial;
     align-items: initial;
-    padding: 7.5% 1%;
+    padding: 7.5% 17px;
   }
   span {
     display: block;
@@ -296,12 +301,11 @@ header {
     padding-top: 2%;
     display: flex;
     font-weight: 500;
-    font-size: 17px;
     flex-direction: column;
     justify-content: space-between;
     @include max_lg {
       order: 1;
-      margin: 0 0 5% 0;
+      margin: 0 0 9% 0;
       width: 100%;
       align-items: center;
     }
@@ -310,17 +314,16 @@ header {
     }
   }
   img {
-    width: 200px;
-    min-width: 150px;
-    max-width: 200px;
+    width: 34%;
     height: 100%;
-    padding: 33px;
-    margin: 1% 0 0 0;
+    margin: 3%  0 0 0;
+    max-width: 134px;
+    min-width: 60px;
     filter: invert(63%);
     @include max_lg {
-      width: 34%;
       order: 2.5;
-      margin: 0 auto 2% 5%;
+      margin: 3% auto 3% 3%;
+      width: 20%;
     }
   }
   p {
@@ -330,11 +333,10 @@ header {
     justify-content: space-around;
     width: 62%;
     min-height: 380px;
-    font-size: $fontsize;
     @include max_lg {
       width: initial;
-      min-height: initial;
       order: 3;
+      min-height: 267px;
     }
     .block {
       display: block;
@@ -343,10 +345,6 @@ header {
       &.sticky {
         position: sticky;
         top: 5%;
-        @include max_lg {
-          position: relative;
-          top: initial;
-        }
       }
     }
     .row {
@@ -404,7 +402,6 @@ footer {
   }
   h1 {
     text-align: center;
-    font-size: 18px;
     font-weight: 400;
     color: $color_1;
     margin: 0 0 1rem 0;
@@ -412,7 +409,6 @@ footer {
   #go-back {
     display: block;
     text-align: center;
-    font-size: 18px;
     font-weight: 400;
     border: 1px solid $color_1;
     border-radius: 20px;
