--- a/scss/partials/_font.scss
+++ b/scss/partials/_font.scss
@@ -1,7 +1,10 @@
 @font-face {
     font-family: "NunitoSans";
-    src: url(../font/NunitoSans.ttf);
+    font-style: normal;
+    font-weight: 100 900;
     font-display: swap;
+    src: url(../font/NunitoSans.ttf) format('truetype-variations');
 }
+
 
 $font: "NunitoSans";
